<resources>
    <string name="app_name">MSF Training</string>
    <string name="login">Login</string>
    <string name="demo">Demo</string>
    <string name="hello">Hello</string>
    <string name="loginText">Login to Continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="local">Local variable is</string>
    <string name="instance">Instance variable is</string>
    <string name="title_home">Home</string>
    <string name="add">Add</string>
    <string name="sub">Subtract</string>
    <string name="first">Enter first number</string>
    <string name="second">Enter second number</string>
    <string name="sum">Sum is</string>
    <string name="prod">Difference is</string>
    <string name="nan">NaN</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="date">Date</string>
    <string name="add_product">Add Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="product_catalogue">Product Catalogue</string>
    <string name="logout">Logout</string>
    <string name="logo">Logo</string>
    <string name="food">Foods</string>
    <string name="brands">Brands</string>
    <string name="flowers">Flowers</string>
    <string name="recyclerview">RecyclerView + BottomTab</string>
    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="result">Result</string>
    <string name="local_hi">Local Hi</string>
    <string name="instance_hi">Instance Hi</string>
    <string name="akshay">akshay</string>
    <string name="new_pass">123456</string>
    <string name="check_name">Please check username</string>
    <string name="check_pass">Please check Password</string>
    <string name="confirm">Confirm</string>
    <string name="logout_confirm">Are you sure that you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="valid_inputs">Enter valid inputs</string>
    <string name="data_saved">Data saved successfully</string>
    <string name="delete_item">Are you sure you want to delete this item?</string>
    <string name="deletes_the_card">Deletes the card</string>
    <string name="settings_button">Settings Button</string>
    <string name="sort_items">Sort Items</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="select_all">Select All</string>
    <string name="refreshed">Refreshed</string>
    <string name="delete_all">Delete all</string>
    <string name="delete_all_confirmation">Are you sure to delete all items?</string>
    <string name="all_deleted">All items were deleted</string>
    <string name="is_deleted_from">\" is deleted from the position \"</string>
    <string name="back_button">Back Button</string>
    <string name="close_button">Close button</string>
    <string name="enter_a_name">Enter a name</string>
    <string name="predict_gender">Predict Gender</string>
    <string name="gender_predictor">GENDER PREDICTOR</string>
    <string name="users_api">Users API</string>

</resources>